# dashboard

./: .gitignore  Taskfile.yml  docker-compose.yml
grafana/: Dockerfile
grafana/datasources/: postgres.yaml
nginx/: Dockerfile  default.conf.template  docker-entrypoint-auto-reload.sh
postgres/: Dockerfile  postgresql.conf  psqlrc
updater/: .dockerignore  Dockerfile  pyproject.toml
updater/updater/: boulderwelt.py  database.py  gas_storage.py  main.py  nergie.py  settings.py  utils.py  workflowy.py
