[tool.poetry]
name = "updater"
version = "0.1.0"
description = ""
authors = ["Michael Engelhard <engelhard.michael+git@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
requests = "^2.28.2"
SQLAlchemy = "^1.4.46"
ipython = "^8.8.0"
pydantic = "^1.10.4"
schedule = "^1.1.0"
APScheduler = "^3.9.1"
typer = "^0.7.0"
psycopg2-binary = "^2.9.5"
lxml = "^4.9.2"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
sqlalchemy2-stubs = "^0.0.2-alpha.32"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
